@@ -1,5 +1,8 @@
 package groom.backend.domain.publicdata.scheduler;
 
+import groom.backend.domain.park.entity.Park;
+import groom.backend.domain.park.repository.ParkRepository;
+import groom.backend.domain.park.util.ParkCoordinates;
 import groom.backend.domain.publicdata.dto.SavePublicDataResponse;
 import groom.backend.domain.publicdata.service.PublicDataService;
 import lombok.RequiredArgsConstructor;
@@ -10,7 +13,6 @@ import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -32,12 +34,13 @@ import java.util.List;
 @Slf4j
 public class PublicDataScheduler {
     private final PublicDataService publicDataService;
+    private final ParkRepository parkRepository;
 
     /**
      * 업데이트 대상 공원 리스트 (AREA_NM)
      * 공공 API 요청 시 이 이름들을 사용합니다.
      */
-    private static final List<String> TARGET_AREA_NAMES = Arrays.asList(
+    private static final List<String> TARGET_AREA_NAMES = List.of(
             "강서한강공원",
             "고척돔",
             "광나루한강공원",
@@ -83,7 +86,47 @@ public class PublicDataScheduler {
     @EventListener(ApplicationReadyEvent.class)
     public void onApplicationReady() {
         log.info("=== 애플리케이션 시작 시 공공 데이터 초기 업데이트 시작 ===");
+        
+        // 공원 경도, 위도 정보 저장
+        updateParkCoordinates();
+        
         updatePublicData();
+    }
+    
+    /**
+     * 공원별 경도, 위도 정보를 DB에 저장합니다.
+     * 서버 실행 시 한 번만 실행됩니다.
+     */
+    private void updateParkCoordinates() {
+        log.info("공원 경도, 위도 정보 저장 시작");
+        
+        int updatedCount = 0;
+        // 모든 공원 좌표 정보를 순회하며 저장
+        for (String areaCode : ParkCoordinates.getAllAreaCodes()) {
+            ParkCoordinates.ParkCoordinate coordinate = ParkCoordinates.getCoordinate(areaCode);
+            if (coordinate == null) {
+                continue;
+            }
+            
+            try {
+                Park park = parkRepository.findByAreaCode(areaCode).orElse(null);
+                if (park != null) {
+                    park.setLongitude(coordinate.getLongitude());
+                    park.setLatitude(coordinate.getLatitude());
+                    parkRepository.save(park);
+                    updatedCount++;
+                    log.debug("공원 좌표 업데이트 완료 - AREA_CODE: {}, 경도: {}, 위도: {}", 
+                            areaCode, coordinate.getLongitude(), coordinate.getLatitude());
+                } else {
+                    log.warn("공원 정보를 찾을 수 없습니다 - AREA_CODE: {}", areaCode);
+                }
+            } catch (Exception e) {
+                log.error("공원 좌표 업데이트 중 오류 발생 - AREA_CODE: {}, ERROR: {}", 
+                        areaCode, e.getMessage(), e);
+            }
+        }
+        
+        log.info("공원 경도, 위도 정보 저장 완료 - 업데이트된 공원 수: {}", updatedCount);
     }
 
     /**
@@ -116,54 +159,49 @@ public class PublicDataScheduler {
      * 하드코딩된 공원 리스트를 순회하며 각 공원의 공공 데이터를 업데이트합니다.
      */
     private void updatePublicData() {
-        try {
-            log.info("총 {}개의 공원 데이터 업데이트 시작", TARGET_AREA_NAMES.size());
-            
-            int successCount = 0;
-            int failCount = 0;
-            List<String> failedAreaNames = new ArrayList<>();
-            List<String> failedReasons = new ArrayList<>();
-            
-            // 각 공원에 대해 공공 API 호출 및 저장
-            for (String areaName : TARGET_AREA_NAMES) {
-                try {
-                    log.debug("공원 데이터 업데이트 시작 - AREA_NAME: {}", areaName);
-                    
-                    // 공공 API 호출 및 저장 (startIndex=1, endIndex=5로 고정)
-                    SavePublicDataResponse response = publicDataService.saveCityData(areaName, 1, 5);
-                    
-                    if (response != null) {
-                        successCount++;
-                        log.debug("공원 데이터 업데이트 완료 - AREA_NAME: {}, RESULT: {}", areaName, response);
-                    } else {
-                        failCount++;
-                        failedAreaNames.add(areaName);
-                        failedReasons.add("API 응답이 null입니다");
-                        log.warn("공원 데이터 업데이트 실패 - AREA_NAME: {}", areaName);
-                    }
-                    
-                } catch (Exception e) {
+        log.info("총 {}개의 공원 데이터 업데이트 시작", TARGET_AREA_NAMES.size());
+        
+        int successCount = 0;
+        int failCount = 0;
+        List<String> failedAreaNames = new ArrayList<>();
+        List<String> failedReasons = new ArrayList<>();
+        
+        // 각 공원에 대해 공공 API 호출 및 저장
+        for (String areaName : TARGET_AREA_NAMES) {
+            try {
+                log.debug("공원 데이터 업데이트 시작 - AREA_NAME: {}", areaName);
+                
+                // 공공 API 호출 및 저장 (startIndex=1, endIndex=5로 고정)
+                SavePublicDataResponse response = publicDataService.saveCityData(areaName, 1, 5);
+                
+                if (response != null) {
+                    successCount++;
+                    log.debug("공원 데이터 업데이트 완료 - AREA_NAME: {}, RESULT: {}", areaName, response);
+                } else {
                     failCount++;
                     failedAreaNames.add(areaName);
-                    failedReasons.add(e.getMessage() != null ? e.getMessage() : e.getClass().getSimpleName());
-                    log.error("공원 데이터 업데이트 중 오류 발생 - AREA_NAME: {}, ERROR: {}", 
-                            areaName, e.getMessage(), e);
+                    failedReasons.add("API 응답이 null입니다");
+                    log.warn("공원 데이터 업데이트 실패 - AREA_NAME: {}", areaName);
                 }
+                
+            } catch (Exception e) {
+                failCount++;
+                failedAreaNames.add(areaName);
+                failedReasons.add(e.getMessage() != null ? e.getMessage() : e.getClass().getSimpleName());
+                log.error("공원 데이터 업데이트 중 오류 발생 - AREA_NAME: {}, ERROR: {}", 
+                        areaName, e.getMessage(), e);
             }
-            
-            log.info("=== 공공 데이터 자동 업데이트 완료 ===");
-            log.info("성공: {}개, 실패: {}개, 전체: {}개", successCount, failCount, TARGET_AREA_NAMES.size());
-            
-            // 실패한 공원 정보 상세 로깅
-            if (failCount > 0) {
-                log.warn("=== 실패한 공원 목록 ({}개) ===", failCount);
-                for (int i = 0; i < failedAreaNames.size(); i++) {
-                    log.warn("  - {}: {}", failedAreaNames.get(i), failedReasons.get(i));
-                }
+        }
+        
+        log.info("=== 공공 데이터 자동 업데이트 완료 ===");
+        log.info("성공: {}개, 실패: {}개, 전체: {}개", successCount, failCount, TARGET_AREA_NAMES.size());
+        
+        // 실패한 공원 정보 상세 로깅
+        if (failCount > 0) {
+            log.warn("=== 실패한 공원 목록 ({}개) ===", failCount);
+            for (int i = 0; i < failedAreaNames.size(); i++) {
+                log.warn("  - {}: {}", failedAreaNames.get(i), failedReasons.get(i));
             }
-            
-        } catch (Exception e) {
-            log.error("공공 데이터 자동 업데이트 작업 중 예상치 못한 오류 발생", e);
         }
     }
 }
